--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">ChatAppC38GOnline</string>
     <string name="title_activity_register">RegisterActivity</string>
     <string name="title_activity_home">HomeActivity</string>
+    <string name="title_activity_add_room">AddRoomActivity</string>
+    <string name="home">Home</string>
+    <string name="add_room_title">Add Room</string>
+    <string name="create_new_room">Create new Room</string>
+    <string name="room_title">Room Title</string>
+    <string name="room_desc">Room Description</string>
 </resources>
